SubBt/force-app/main/default/objects/RFQ_Template_Settings__c/RFQ_Template_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>RFQ Template Settings</label>
</CustomObject>