SubBt/force-app/main/default/objects/RFQ_Template_Settings__c/fields/Force_Site_URL__c.field-meta.xml
<CustomField>
    <fullName>Force_Site_URL__c</fullName>
    <label>Force Site URL</label>
    <length>225</length>
    <type>Text</type>
</CustomField>