SubBt/force-app/main/default/objects/RFQ_Template_Settings__c/fields/Inbound_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Email_Address__c</fullName>
    <label>Inbound Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>