SubBt/force-app/main/default/objects/RFQ_Template_Settings__c/fields/Sites_URL__c.field-meta.xml
<CustomField>
    <fullName>Sites_URL__c</fullName>
    <label>Sites URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>